<resources>
    <string name="app_name">MoviesFinder</string>
    <string name="default_text_button">Button</string>
    <string name="movie_container_name">Test text</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="navigation_menu">Navigation menu</string>
    <string name="movie_title">Movie title</string>
    <string name="action_category">Actions</string>
    <string name="top_category">Top of Views</string>
    <string name="most_category">Most to watch</string>
    <string name="hits_category">Hits</string>
    <string name="drama_category">Drama</string>
    <string name="comedy_category">Comedy</string>
    <string name="cast">Cast</string>
    <string name="you_may_also_like">You may also like</string>
    <string name="where_to_watch">Where to watch</string>
    <string name="directors">Directors:</string>
    <string name="rating">Rating: </string>
    <string name="rate_this_movie">RATE THIS MOVIE</string>
    <string name="error_text">Something went wrong, please try again</string>
    <string name="popular">Popular</string>
    <string name="latest">Latest</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="top_rated">Top Rated</string>
    <string name="genres">Action / Adventure / Comedy / Drama</string>
    <string name="duration">0h 00min</string>
    <string name="providers">Watch online</string>
    <string name="genre_image">Genre Image</string>
    <string name="movies">Movies</string>
    <string name="shows">Shows</string>
    <string name="favorites">Favorites</string>
    <string name="release_date">Release Date:</string>
    <string name="users_rate">Users rate</string>
    <string name="my_rate">My rate</string>
    <string name="favorite">Favorite</string>
    <string name="background_image">Background Image</string>
    <string name="storyline">Storyline</string>
    <string name="watch_list">Watchlist</string>
    <string name="search">Search</string>
    <string name="movies_watched">Movies watched</string>
    <string name="tv_series_watched">TV Series watched</string>
    <string name="hours_spent">Hours spent</string>
    <string name="tv_series_watchlist">TV series watchlist</string>
    <string name="personal_lists">Personal lists</string>
    <string name="some_provider">Some Provider</string>
    <string name="rating_star">Rating Star</string>
    <string name="_0_0">0.0</string>
    <string name="_10">/10</string>
    <string name="watch_online">Watch online</string>
    <string name="open_arrow">Open Arrow</string>
    <string name="profile_photo_background">Profile photo background</string>
    <string name="_145">145</string>
    <string name="_72">72</string>
    <string name="_2258">2258</string>
    <string name="recently_searched">Recently Searched</string>
    <string name="profile">Profile</string>
    <string name="for_you">For you</string>
    <string name="watched">Watched</string>
    <string name="watchlist">Watchlist</string>
    <string name="cancel">Cancel</string>
    <string name="okay">OK</string>
    <string name="crew">Crew</string>

    <string name="error_def_title">Error</string>
    <string name="error_def_description">An error was occurred</string>
    <string name="error_def_button">Retry</string>
</resources>