<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/movie_details_bottom_sheet"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/bottom_sheet_behavior"
    app:behavior_peekHeight="0dp"
    android:clickable="true"
    app:behavior_hideable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bottom_sheet_shape"
    android:focusable="true"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/poster_card_view"
        android:layout_width="120dp"
        android:layout_height="180dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:clickable="false"
        android:elevation="5dp"
        app:cardCornerRadius="5dp">
        <ImageView
            android:id="@+id/poster_image_view"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground"
            android:clickable="false"
            android:contentDescription="@string/movie_title"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/descriptions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/poster_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/poster_card_view"
        app:layout_constraintBottom_toBottomOf="@id/poster_card_view"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            style="@style/TextStyle.PrimaryHeading"/>
        <TextView
            android:id="@+id/movie_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/TextStyle.SecondaryHeading"
            android:text="@string/rating"/>
        <TextView
            android:id="@+id/length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/TextStyle.SecondaryHeading"
            android:maxLines="2"
            android:text="@string/duration"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/genre_recycler"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            tools:itemCount="2"
            tools:listitem="@layout/item_genre"

            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"/>
        <TextView
            android:id="@+id/providers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextStyle.SecondaryHeading"
            android:text="@string/providers"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/providers_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            tools:listitem="@layout/item_provider"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    </LinearLayout>

    <TextView
        android:id="@+id/rate_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/rate_this_movie"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/descriptions"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rate_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            tools:listitem="@layout/rate_circle_toggle_button"
            app:layout_constraintTop_toBottomOf="@id/rate_text_view"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <View style="@style/Divider"
        android:id="@+id/divider_1"
        android:layout_margin = "10dp"
        app:layout_constraintTop_toBottomOf="@id/rate_view"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/movie_description"
        style="@style/TextStyle.Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/divider_1"
        app:layout_constraintStart_toStartOf="parent"/>

    <View style="@style/Divider"
        android:id="@+id/divider_2"
        android:layout_margin = "10dp"
        app:layout_constraintTop_toBottomOf="@id/movie_description"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/actors_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/actors"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/divider_2"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/actors_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/actors_text_view"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>
</androidx.constraintlayout.widget.ConstraintLayout>