<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:background="@color/transparent_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/secondary_color"
            app:expandedTitleMarginStart="@dimen/right_side_from_poster"
            app:expandedTitleTextAppearance="@style/TextStyle.PrimaryHeading.WhiteTitle"
            app:maxLines="3"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@id/toolbar">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/toolbar_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:alpha="0"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:titleTextAppearance="@style/TextStyle.PrimaryHeading"
                app:layout_collapseMode="pin">
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/descriptions"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginStart="@dimen/right_side_from_poster"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/genres"
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal"
                    android:text="@string/genres"
                    android:textColor="@color/on_background_color"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/length"
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duration"
                    android:textColor="@color/on_background_color"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/release_date"
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date"
                    android:textColor="@color/on_background_color"
                    android:textSize="12sp" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/additional_details"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="@dimen/stnd_margin"
                android:layout_marginTop="@dimen/stnd_between_line_space">

                <com.lefarmico.moviesfinder.ui.common.widget.RatingView
                    android:id="@+id/movie_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@+id/movie_rate_text"
                    app:layout_constraintEnd_toStartOf="@id/vertical_divider_1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/movie_rate_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextStyle.Warning"
                    app:layout_constraintTop_toBottomOf="@+id/movie_rate"
                    app:layout_constraintStart_toStartOf="@id/movie_rate"
                    app:layout_constraintEnd_toEndOf="@id/movie_rate"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textColor="@color/on_background_color"
                    android:text="@string/users_rate"
                    />

                <View
                    android:id="@+id/vertical_divider_1"
                    style="@style/Divider.Vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/user_rate"
                    app:layout_constraintStart_toEndOf="@id/movie_rate"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <com.lefarmico.moviesfinder.ui.common.widget.PersonalRatingView
                    android:id="@+id/user_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    app:layout_constraintBottom_toTopOf="@+id/user_rate_text"
                    app:layout_constraintEnd_toStartOf="@id/vertical_divider_2"
                    app:layout_constraintStart_toEndOf="@id/vertical_divider_1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:rating_number="80"
                    app:view_size="32dp"
                    />
                <TextView
                    android:id="@+id/user_rate_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextStyle.Warning"
                    app:layout_constraintTop_toBottomOf="@+id/user_rate"
                    app:layout_constraintStart_toStartOf="@id/user_rate"
                    app:layout_constraintEnd_toEndOf="@id/user_rate"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textColor="@color/on_background_color"
                    android:text="@string/my_rate"
                    />

                <View
                    android:id="@+id/vertical_divider_2"
                    style="@style/Divider.Vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/watchlist_toggle"
                    app:layout_constraintStart_toEndOf="@id/user_rate"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <ToggleButton
                    android:id="@+id/watchlist_toggle"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/selector_wishlist_ic"
                    android:backgroundTint="@color/primary_color"
                    android:textOff=""
                    android:textOn=""
                    app:layout_constraintBottom_toTopOf="@+id/watchlist_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/vertical_divider_2"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                <TextView
                    android:id="@+id/watchlist_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextStyle.Warning"
                    app:layout_constraintTop_toBottomOf="@+id/watchlist_toggle"
                    app:layout_constraintStart_toStartOf="@id/watchlist_toggle"
                    app:layout_constraintEnd_toEndOf="@id/watchlist_toggle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textColor="@color/on_background_color"
                    android:text="@string/watch_list"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Spinner
                android:id="@+id/provider_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/stnd_between_line_space"
                android:background="@drawable/buttons_shape"
                android:popupBackground="@drawable/buttons_shape"
                android:spinnerMode="dropdown"
                android:layout_marginHorizontal="@dimen/stnd_margin"
                tools:listitem="@layout/item_provider_spinner_default" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextStyle.SecondaryHeading"
                android:layout_marginTop="@dimen/stnd_between_line_space"
                android:layout_marginStart="@dimen/stnd_margin"
                android:text="@string/storyline"
                />

            <TextView
                android:id="@+id/movie_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextStyle.Description"
                tools:text="@tools:sample/lorem/random"
                android:layout_marginHorizontal="16dp"
                />

            <View
                android:id="@+id/divider_2"
                style="@style/Divider"
                android:layout_marginHorizontal="@dimen/stnd_margin"
                android:layout_marginTop="@dimen/stnd_between_line_space"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/actors_text_view"
                style="@style/TextStyle.SecondaryHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/stnd_between_line_space"
                android:layout_marginBottom="@dimen/stnd_small_margin"
                android:layout_marginStart="@dimen/stnd_margin"
                android:text="@string/cast"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cast_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:listitem="@layout/item_cast"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                />
            <View
                android:id="@+id/divider_3"
                style="@style/Divider"
                android:layout_marginHorizontal="@dimen/stnd_margin"
                android:layout_marginTop="@dimen/stnd_between_line_space"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/recommendations_header"
                style="@style/TextStyle.SecondaryHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/stnd_between_line_space"
                android:layout_marginBottom="@dimen/stnd_small_margin"
                android:layout_marginStart="@dimen/stnd_margin"
                android:text="@string/recommendations"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recommendations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/stnd_between_line_space"
                android:layout_marginHorizontal="@dimen/stnd_margin"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"
                tools:listitem="@layout/widget_movie_large"
                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <androidx.cardview.widget.CardView
        android:id="@+id/poster_card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|left"
        android:layout_marginStart="@dimen/stnd_margin"
        app:layout_behavior="com.lefarmico.moviesfinder.ui.common.layoutBehavior.DisappearingViewBehavior"
        android:clickable="false"
        app:cardCornerRadius="@dimen/stnd_big_border_radius">
        <ImageView
            android:id="@+id/poster_image_view"
            android:layout_width="@dimen/big_card_width"
            android:layout_height="@dimen/big_card_height"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground"
            android:clickable="false"
            android:contentDescription="@string/movie_title"
            />
    </androidx.cardview.widget.CardView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>